--- a/src/thesis/FXML_Topics.fxml
+++ b/src/thesis/FXML_Topics.fxml
@@ -18,7 +18,7 @@
       <Pane fx:id="beginPane" prefHeight="650.0" prefWidth="650.0">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffae2133" height="650.0" stroke="BLACK" strokeType="INSIDE" width="650.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" height="95.0" layoutX="52.0" layoutY="73.0" stroke="BLACK" strokeType="INSIDE" width="547.0">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" height="95.0" layoutX="52.0" layoutY="21.0" stroke="BLACK" strokeType="INSIDE" width="547.0">
                <fill>
                   <LinearGradient endX="1.0" endY="1.0">
                      <stops>
@@ -30,17 +30,17 @@
                   </LinearGradient>
                </fill>
             </Rectangle>
-            <Label layoutX="184.0" layoutY="78.0" prefHeight="85.0" prefWidth="284.0" text="Választható témák">
+            <Label layoutX="185.0" layoutY="26.0" prefHeight="85.0" prefWidth="284.0" text="Választható témák">
                <font>
                   <Font size="36.0" />
                </font>
             </Label>
-            <Label layoutX="51.0" layoutY="193.0" text="Ezen a felületen tudja kiválasztani a tanulni kívánt témát.">
+            <Label layoutX="50.0" layoutY="171.0" text="Ezen a felületen tudja kiválasztani a tanulni kívánt témát.">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Button layoutX="91.0" layoutY="261.0" mnemonicParsing="false" onAction="#loadThird" style="-fx-background-color: #F8B9DE; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Egészség">
+            <Button layoutX="91.0" layoutY="261.0" mnemonicParsing="false" onAction="#loadHealth" prefHeight="47.0" prefWidth="159.0" style="-fx-background-color: #F8B9DE; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Egészség">
                <font>
                   <Font size="24.0" />
                </font>
@@ -48,7 +48,39 @@
                   <Tooltip text="A gomb megnyomásával az egészség  témakörben tanulhat." />
                </tooltip>
             </Button>
-            <Button layoutX="92.0" layoutY="343.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="130.0" style="-fx-background-color: #ACFBD5; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Utazás">
+            <Button layoutX="399.0" layoutY="261.0" mnemonicParsing="false" onAction="#loadNature" prefHeight="47.0" prefWidth="159.0" style="-fx-background-color: #ACFBD5; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Természet">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <tooltip>
+                  <Tooltip text="A gomb megnyomásával a temészet témakörben tanulhat." />
+               </tooltip>
+            </Button>
+            <Button layoutX="91.0" layoutY="343.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="159.0" style="-fx-background-color: #FF6089; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Étkezés">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <tooltip>
+                  <Tooltip text="A gomb megnyomásával az étkezés témakörben tanulhat." />
+               </tooltip>
+            </Button>
+            <Button layoutX="399.0" layoutY="343.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="159.0" style="-fx-background-color: #FFC560; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Közlekedés">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <tooltip>
+                  <Tooltip text="A gomb megnyomásával a közlekedés témakörben tanulhat." />
+               </tooltip>
+            </Button>
+            <Button layoutX="92.0" layoutY="432.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="159.0" style="-fx-background-color: #E3FF60; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Család">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <tooltip>
+                  <Tooltip text="A gomb megnyomásával a család témakörben tanulhat." />
+               </tooltip>
+            </Button>
+            <Button layoutX="399.0" layoutY="432.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="159.0" style="-fx-background-color: #60BAFF; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Utazás">
                <font>
                   <Font size="24.0" />
                </font>
@@ -64,7 +96,7 @@
                   <Tooltip text="A gombra kattintva megtekintheti eddigi eredményeit." />
                </tooltip>
             </Button>
-            <Button layoutX="54.0" layoutY="580.0" mnemonicParsing="false" onAction="#logOut" style="-fx-background-color: #D7A5F1; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Kilépés">
+            <Button layoutX="54.0" layoutY="580.0" mnemonicParsing="false" onAction="#logOut" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #D7A5F1; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Kilépés">
                <font>
                   <Font size="24.0" />
                </font>
@@ -72,6 +104,21 @@
                   <Tooltip text="A gomb megnyomásával kilép a programból." />
                </tooltip>
             </Button>
+            <Label layoutX="291.0" layoutY="270.0" text="1. szint">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="291.0" layoutY="352.0" text="2. szint">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="293.0" layoutY="441.0" text="3. szint">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
          </children></Pane>
       <Pane fx:id="quitPane" layoutX="171.0" layoutY="243.0" prefHeight="200.0" prefWidth="319.0" visible="false">
          <children>
