--- a/src/thesis/FXML_Topics.fxml
+++ b/src/thesis/FXML_Topics.fxml
@@ -56,7 +56,7 @@
                   <Tooltip text="A gomb megnyomásával a temészet témakörben tanulhat." />
                </tooltip>
             </Button>
-            <Button layoutX="91.0" layoutY="343.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="159.0" style="-fx-background-color: #FF6089; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Étkezés">
+            <Button layoutX="91.0" layoutY="343.0" mnemonicParsing="false" onAction="#loadFood" prefHeight="47.0" prefWidth="159.0" style="-fx-background-color: #FF6089; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="Étkezés">
                <font>
                   <Font size="24.0" />
                </font>
