--- a/src/thesis/FXML_Learn.fxml
+++ b/src/thesis/FXML_Learn.fxml
@@ -153,7 +153,7 @@
             <image>
             <Image url="@nature.jpg" />
          </image></ImageView>
-         <Button layoutX="269.0" layoutY="155.0" mnemonicParsing="false" style="-fx-background-color: #87BAD7; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="hang lejátszása">
+         <Button fx:id="soundButton" layoutX="269.0" layoutY="155.0" mnemonicParsing="false" onAction="#soundAction" style="-fx-background-color: #87BAD7; -fx-background-radius: 5; -fx-border-color: #000000; -fx-border-width: 1 1 1 1; -fx-background-insets: 0; -fx-border-radius: 4;" text="hang lejátszása">
          <font>
             <Font size="20.0" />
          </font>
@@ -163,7 +163,7 @@
             <Font size="26.0" />
          </font>
       </Label>
-      <Label fx:id="secondLabel" alignment="CENTER_RIGHT" layoutX="15.0" layoutY="322.0" prefHeight="31.0" prefWidth="467.0" textAlignment="RIGHT">
+      <Label fx:id="secondLabel" layoutX="52.0" layoutY="322.0" prefHeight="31.0" prefWidth="430.0">
          <font>
             <Font size="26.0" />
          </font>
@@ -173,7 +173,7 @@
             <Font size="26.0" />
          </font>
       </Label>
-      <Label fx:id="fourthLabel" alignment="CENTER_RIGHT" layoutX="12.0" layoutY="419.0" prefHeight="31.0" prefWidth="467.0" textAlignment="RIGHT">
+      <Label fx:id="fourthLabel" layoutX="49.0" layoutY="419.0" prefHeight="31.0" prefWidth="430.0">
          <font>
             <Font size="26.0" />
          </font>
